objects/GEMS_BA_Category_Assignment__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>GEMS BA Category Assignments</relationshipLabel>
        <relationshipName>GEMS_BA_Category_Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Benefit_Agreement__c</fullName>
        <label>Benefit Agreement</label>
        <referenceTo>GEMS_Benefit_Agreement__c</referenceTo>
        <relationshipName>BA_Category_Assignments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>Cascade</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>BA Category Assignments</relationshipLabel>
        <relationshipName>BA_Category_Assignments</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <referenceTo>GEMS_Category__c</referenceTo>
        <relationshipName>Category_BA_Assignments</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>IsNew__c</fullName>
        <defaultValue>true</defaultValue>
        <label>IsNew</label>
        <type>Checkbox</type>
    </fields>
    <label>GEMS BA Category Association</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>GEMS BA Category Assignments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>